GitHub Logo Size change
Changing size of png to increase load time.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 <a href="https://twitter.com/kurtjfoster" target="_blank"><img src="images/twitterLogo.png" class="iico" /></a>
                             </th>
                             <th>
-                                <a href="https://github.com/KurtJFoster" target="_blank"><img src="images/githubLogo.png" class="iico" /></a>
+                                <a href="https://github.com/KurtJFoster" target="_blank"><img src="images/githubLogoDownsized.png" class="iico" /></a>
                             </th>
                             <th>
                                 <a href="https://www.linkedin.com/in/fostkurt/" target="_blank"><img src="images/linkedinLogo.png" class="iico" /></a>
