--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <h3>Automation Technician</h3>
                 <p class="companyName">Kurtrek · Part-time</p>
                 <h2>Mar 2021 - Present · 2 yrs 1 mos <br /> Corvallis, Oregon, United States</h2>
-                <u>Mission</u>: Direct-to-consumer hydroponic farming with open-source nutrient dosing technology.<br /><br />
-                The ultimate aim is increasing the number of "high-tech" farmers in the world, leading to an increase of food security, as it would end up decentralizing agriculture. Those that grow more food than they consume, would in turn, sell their excess produce and help pay for the machine, which would lower the cost to entry even further.<br /><br />
+                <u>Mission</u>: Direct-to-consumer open-source hydroponic nutrient dosing technology.<br /><br />
+                The ultimate aim is to increase the number of "high-tech" farmers in the world, improving food security.<br /><br />
                 • Testing components at an individual level, keeping track of performance measured<br />
                 • Translating custom CAD to real world results, and constant iteration through the issues<br />
                 • Taking the relevant safety precautions with machine start up, shut down, and troubleshooting<br />
@@ -107,7 +107,7 @@
                 <div class="htxt">
                     <h3>Mineral Shop Co-Owner</h3>
                     <p class="companyName">Starr Creek Minerals · Part-time</p>
-                    <h2>Sep 2022 - Present · 7 mos <br /> Corvallis, Oregon, United States</h2>
+                    <h2>Sep 2022 - Present · 8 mos <br /> Corvallis, Oregon, United States</h2>
                     In my off time I help run an online Etsy store that sells a variety of collector minerals and fossils. Majority of business profits go towards my hydroponics venture.<br /><br />
                     • Accurate accounting of all items moving in and out of shop<br />
                     • Machine building test articles for lapidary processes, for example the cutting of quartz crystals<br />
@@ -225,7 +225,7 @@
                 Built custom automated manufacturing and test equipment, including fabrication tasks.<br /><br />
                 • Kept high-level attention to detail when fabricating/assembling complex robotic machinery<br />
                 • Drilled, tapped, fastened components for industrial electrical panels and pneumatic panels<br />
-                • Wired control panels using electrical diagram, red-lined issues and reported to engineering<br />
+                • Wired control panels using electrical diagrams, red-lined issues and reported to engineering<br />
                 • Stripped, crimped, assembled, MIL-Spec multi-pin connectors (up to 56-pin)<br />
                 • Followed work procedures associated with procurement for timely machine assembly<br />
             </div>
