Added PDF links in case the PDF viewer doesn't load quickly enough in the browser.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -473,6 +473,8 @@
                 Operation of the machine is for rejecting short-width bearings and accepting a tall-width bearings. The tall bearing would then be picked up and placed into a bearing housing on a conveyor line. The system uses five electrically actuated directional control valves to power five pneumatic cylinders and requires twelve sensors for operation.<br /><br />
                 <!-- PDF File that comes up when the pdfLogo picture is clicked -->
                 <div class="color-block0">
+                    <div>If the viewport doesn't load correctly, <a class="bottomLink" target="_blank" href="pdfDocs/Bearing Supply, Sorting, & Placement Automated System.pdf">Click Here</a> to open PDF externally.</div>
+                    <br />
                     <div class="pdfBlock">
                         <iframe class="pdf-reader" src="pdfDocs/Bearing Supply, Sorting, & Placement Automated System.pdf" width="550" height="550"></iframe>
                     </div>
@@ -517,6 +519,8 @@
                 During my second year as a Mechatronics student at Linn Benton Community College, I developed and assembled a prototype version of an automated process that involved communication between two Arduino's and a Programmable Logic Controller. Utilized two dual-axis (rotational and linear acting) wafer handling machines which were used as robot arms. The concept image is a possible route for where this project could take the next steps.<br /><br />
                 <!-- PDF File that comes up when the pdfLogo picture is clicked -->
                 <div class="color-block1">
+                    <div>If the viewport doesn't load correctly, <a class="bottomLink" target="_blank" href="pdfDocs/Automated Parts Transfer System.pdf">Click Here</a> to open PDF externally.</div>
+                    <br />
                     <div class="pdfBlock">
                         <iframe class="pdf-reader" src="pdfDocs/Automated Parts Transfer System.pdf" width="550" height="550"></iframe>
                     </div>
@@ -562,6 +566,8 @@
                 I designed, built and tested a fully functional 6061 Aluminum Mountain Bicycle Frame. Some of the challenges included: learning to TIG weld aluminum, reverse engineering of bicycle frame components, project scope and aesthetics.<br /><br />
                 <!-- PDF File that comes up when the pdfLogo picture is clicked -->
                 <div class="color-block2">
+                    <div>If the viewport doesn't load correctly, <a class="bottomLink" target="_blank" href="pdfDocs/Aluminum Mountain Bike Frame.pdf">Click Here</a> to open PDF externally.</div>
+                    <br />
                     <div class="pdfBlock">
                         <iframe class="pdf-reader" src="pdfDocs/Aluminum Mountain Bike Frame.pdf" width="550" height="550"></iframe>
                     </div>
