Added book page
Added a goodreads book page, and also updated my job description.

--- a/bookList.html
+++ b/bookList.html
@@ -1,47 +1,11 @@
 <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
 *
-*   Credit should always be given even if design
-*   is very different from the initial one.
+*   Credit should be given even if design
+*   is different from the initial one.
 *
 *   This website is based off the previous Tesla
 *   AI Director - Andrej Karpathy's portfolio
 *   page: https://karpathy.ai
-*
-*
-*       C:\> wantDomain.cpp_
-*
-*       running.
-*       running..
-*       running...
-*
-*       #include <iostream>
-*
-*       int main() {
-*           std::cout << "WANT THIS DOMAIN NAME?";
-*           return 0;
-*           }
-*
-*
-*       C:\> WANT THIS DOMAIN NAME?
-*
-*
-*
-*   If you are here because you want to purchase
-*   this website domain: https://kfost.com please
-*   contact me by clicking the mail icon to get
-*   my email information. Or message me with
-*   another app, I will try to respond soon.
-*
-*   There's no gurantee I'll sell it, but if you
-*   give a good enough reason, I would be happy
-*   to ablige.
-*
-*   If you'll use the domain for a buisness I
-*   will sell it for a lower rate. This is
-*   because corporations eat cash like nothing
-*   I have ever seen before, and I'd rather see
-*   you spend that money on your business rather
-*   than some stupid digital domain address.
 *
 *   ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
 -->
