--- a/usePolicy.html
+++ b/usePolicy.html
@@ -1,52 +1,16 @@
 <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
 *
-*   Credit should always be given even if design
-*   is very different from the initial one.
+*   Credit should be given even if design
+*   is different from the initial one.
 *
 *   This website is based off the previous Tesla
 *   AI Director - Andrej Karpathy's portfolio
 *   page: https://karpathy.ai
 *
-*
-*       C:\> wantDomain.cpp_
-*
-*       running.
-*       running..
-*       running...
-*
-*       #include <iostream>
-*
-*       int main() {
-*           std::cout << "WANT THIS DOMAIN NAME?";
-*           return 0;
-*           }
-*
-*
-*       C:\> WANT THIS DOMAIN NAME?
-*
-*
-*
-*   If you are here because you want to purchase
-*   this website domain: https://kfost.com please
-*   contact me by clicking the mail icon to get
-*   my email information. Or message me with
-*   another app, I will try to respond soon.
-*
-*   There's no gurantee I'll sell it, but if you
-*   give a good enough reason, I would be happy
-*   to ablige.
-*
-*   If you'll use the domain for a buisness I
-*   will sell it for a lower rate. This is
-*   because corporations eat cash like nothing
-*   I have ever seen before, and I'd rather see
-*   you spend that money on your business rather
-*   than some stupid digital domain address.
-*
 *   ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
 -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -56,10 +20,29 @@
 </head>
 <body>
 
+    <br /><br /><br />
+    <br /><br /><br />
+
+    <h1 class="large-thin-text">Use Policy</h1>
+
+    <style>
+        .large-thin-text {
+            font-size: 4rem;
+            font-weight: 200;
+            font-style: normal;
+            font-family: 'Helvetica Neue', sans-serif;
+            letter-spacing: 1px;
+            line-height: 1.2;
+            text-align: justify;
+            margin-right: 25%;
+            margin-left: 25%;
+            margin-top: 5%;
+        }
+    </style>
 
 
     <p style="font-family: Courier; text-align: justify; margin-right: 25%; margin-left: 25%; margin-top: 5%;">
-        Copyright (c) 2023 Kurt J. Foster<br /><br />
+        Copyright (c) <a id="p1"></a> Kurt J. Foster<br /><br />
 
         The content on 'kfost.com' is licensed under the MIT open source license. This means that anyone is free to use the content for any purpose, as long as they follow the terms of the license. The terms of the license require that proper attribution is given to the original author of the content, and in this case, that would be Kurt J. Foster.<br /><br />
 
@@ -67,7 +50,7 @@
 
         By using the content on 'kfost.com', you agree to follow the terms of the MIT open source license, including the requirement to give proper attribution to Kurt J. Foster.<br /><br />
 
-        Please note that this open source content policy applies only to the content on 'kfost.com', and not to any other websites or materials that may be linked to from 'kfost.com'. The content on other websites may be subject to different license terms, and it is your responsibility to understand and comply with those terms if you use any content from those websites.<br /><br />
+        Please note that this open source content policy applies only to the content on 'kfost.com', and not to any other websites or materials that may be linked to from 'kfost.com', either through text links and/or imagery with links embedded, such as logos and book covers. The content on other websites may be subject to different license terms, and it is your responsibility to understand and comply with those terms if you use any content from those websites.<br /><br />
 
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
@@ -87,74 +70,14 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     </p>
+
+    <script>var date = new Date();
+        var current_date = date.getFullYear();
+        document.getElementById("p1").innerHTML = current_date;</script>
+
     <br /><br /><br />
-
-
-
-    <h1 class="large-thin-text">Display 1</h1>
-
-    <style>
-        .large-thin-text {
-            font-size: 4rem; /* adjust this value to change the font size */
-            font-weight: 200; /* adjust this value to change the font weight */
-            font-style: normal; /* adjust this value to change the font style */
-            font-family: 'Helvetica Neue', sans-serif; /* adjust this value to change the font family */
-            letter-spacing: 1px; /* adjust this value to change the letter spacing */
-            line-height: 1.2; /* adjust this value to change the line height */
-        }
-    </style>
-
-
-
-
-    <p>Simple test for web design below:</p>
-
-
-    <center>
-
-        <div class="card" style="max-width: 60%; max-height: 55%; width: flex; background-color: #575757; color: black; font-family: Times New Roman">
-
-            <div class="card-body">
-
-                <div>
-
-                    <center>
-
-                        <div id="slider">
-
-                            <img src="images/controlPanels/ControlPanel23.png" class="slide" id="image23" data-alt-src="images/controlPanels/ControlPanel23a.png" onclick="showPopup(this)">
-
-                        </div>
-
-                        <div id="modal">
-                            <span id="close-button">&times;</span>
-                            <img id="modal-image">
-
-                            <!-- Create script to add an "a" to control panel image -->
-                            <script>function showPopup(image) {
-                                    var popup = document.getElementById("modal-image");
-                                    var altSrc = image.getAttribute("data-alt-src");
-                                    var altImage = document.createElement("img");
-                                    altImage.src = altSrc;
-                                    popup.innerHTML = "";
-                                    popup.appendChild(altImage);
-                                    popup.style.display = "block";
-                                }</script>
-                        </div>
-
-                    </center>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </center>
-
-
-
-
+    <br /><br /><br />
+    <br /><br /><br />
 
 </body>
 </html>
