Updated some links

--- a/eg.html
+++ b/eg.html
@@ -39,10 +39,10 @@
                 <center>
                     <h1 style="color: rgb(255, 255, 255)" class="display-4">Introducing, the modern Cultivator</h1>
                     <br>
-                    <h1 class="h5">Build a custom hydroponic machine.</h1>
-                    <h1 class="h5">No previous experience required.</h1>
-                    <h1 class="h5">Choose from hundreds of designs.</h1>
-                    <h1 class="h5">Access your system from anywhere.</h1>
+                    <h1 class="h5">Elegance in sustainability,</h1>
+                    <h1 class="h5">with interior design in-mind.</h1><br />
+                    <h1 class="h5">Grow food from inside your home, anywhere.</h1>
+                    <h1 class="h5">Choose from hundreds of custom made designs.</h1>
                 </center>
             </div>
             <div id="image-container">
@@ -70,11 +70,9 @@
 
             <div class="text-box">
                 <center>
-                    <br>
-                    <h5 class="h5">Grow food with the unseen force of <i>Gravity</i>.</h5>
                     <h5 class="h5"></h5>
                     <h5 class="h5">Powered by the <b style="color: rgb(255, 255, 255)">Enriched Gravity</b> app.</h5>
-                    <h5 class="h5">Utilizing <b style="color: rgb(255, 255, 255)">first principles</b> for a better world.</h5>
+                    <h5 class="h5">Utilizing first principles for a better world.</h5>
                     <br>
                     <h6 class="h6" style="color: rgb(177, 177, 177)">Click a device above for a high-res image.</h6>
                 </center>
@@ -86,7 +84,7 @@
 
             <div class="text-box">
                 <center>
-                    <h6 class="h6" style="color: rgb(139, 139, 139)"><i>All Rights Reserved</i></h6>
+                    <h6 class="h6" style="color: rgb(139, 139, 139)"><i>We are currently in a prototype phase. <br /> Please contact kfost.com for updates.</i></h6>
                 </center>
             </div>
 
