--- a/egPages/createAccount.html
+++ b/egPages/createAccount.html
@@ -111,7 +111,7 @@
 
 <body>
     <div class="container">
-        <center><a href="https://kurtrek.com"><img src="createAccount-images/new-logo-page-2.png" alt="logo image" class="logo"></a></center>
+        <center><a href="https://kfost.com/eg.html"><img src="createAccount-images/new-logo-page-2.png" alt="logo image" class="logo"></a></center>
         <center><h3 style="margin: 7px; font-size: 35px; font-weight: 400; color: #fff; text-indent: 0px;">Create Account</h3></center>
         <center><h4 style="margin: 1px; font-size: 14px; font-weight: 250; color: #E6E6E6; text-indent: 0px; ">Make a new Enriched Gravity account (*Required fields)</h4></center>
 
@@ -189,7 +189,7 @@
             </h5>
             <h6 style="margin:20px 0px 5px; font-size: 14px; font-weight: 250;">
 
-                <a style="margin: 1px;" href="https://kurtrek.com" class="btn"> Return to Sign In </a>
+                <a style="margin: 1px;" href="https://kfost.com/eg.html" class="btn"> Return to home page </a>
 
                 <h6 id="pswrdNoMatch" style="margin: 1px; color: #f76a65; font-size: 14px; font-weight: 250;">
                     <a style="margin: 1px;"> <!-- "Passwords Don't Match!" --> </a>
