--- a/egPages/egSignIn.html
+++ b/egPages/egSignIn.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <center><a href="https://kurtrek.com"><img src="createAccount-images/new-logo-page-2.png" alt="logo image" class="logo"></a></center>
+        <center><a href="https://kfost.com/eg.html"><img src="createAccount-images/new-logo-page-2.png" alt="logo image" class="logo"></a></center>
         <center><h3 style="margin: 7px; font-size: 35px; font-weight: 400; color: #fff; text-indent: 0px;">Sign In</h3></center>
         <center><h4 style="margin: 1px; font-size: 14px; font-weight: 250; color: #E6E6E6; text-indent: 0px; ">To access your live dashboard or <a href="egPages/createAccount.html"><b>Create an Account</b></a></h4></center>
         <center>
@@ -99,15 +99,15 @@
         </center>
         <center>
             <h6 style="margin: 1px; font-size: 14px; font-weight: 250; color: #E6E6E6; text-indent: 0px;">
-                <a href="https://kurtrek.com">Forgot Username</a> |
-                <a href="https://kurtrek.com">Forgot Email</a> |
-                <a href="https://kurtrek.com">Forgot Password</a>
+                <a href="https://kfost.com/eg.html">Forgot Username</a> |
+                <a href="https://kfost.com/eg.html">Forgot Email</a> |
+                <a href="https://kfost.com/eg.html">Forgot Password</a>
                 <br />
             </h6>
         </center>
         <center>
             <h5 style="margin: 1px;">
-                <br /><a href="https://kurtrek.com" class="submitbtn"> Submit </a>
+                <br /><a href="https://kfost.com/eg.html" class="submitbtn"> Submit </a>
             </h5>
             <h6 style="margin:20px; font-size: 14px; font-weight: 250;">
                 <a style="margin: 1px;" href="pages/info.html" class="btn"> What is this? </a>
