Slight text adjustment

--- a/eg.html
+++ b/eg.html
@@ -72,9 +72,8 @@
                 <center>
                     <h5 class="h5"></h5>
                     <h5 class="h5">Powered by the <b style="color: rgb(255, 255, 255)">Enriched Gravity</b> app.</h5>
-                    <h5 class="h5">Utilizing first principles for a better world.</h5>
+                    <h6 class="h6" style="color: rgb(177, 177, 177)">To learn more, please see our Mission page.</h6>
                     <br>
-                    <h6 class="h6" style="color: rgb(177, 177, 177)">Click a device above for a high-res image.</h6>
                 </center>
             </div>
             <center>
