--- a/egPages/egSignIn.html
+++ b/egPages/egSignIn.html
@@ -88,7 +88,7 @@
     <div class="container">
         <center><a href="https://kfost.com/eg.html"><img src="createAccount-images/new-logo-page-2.png" alt="logo image" class="logo"></a></center>
         <center><h3 style="margin: 7px; font-size: 35px; font-weight: 400; color: #fff; text-indent: 0px;">Sign In</h3></center>
-        <center><h4 style="margin: 1px; font-size: 14px; font-weight: 250; color: #E6E6E6; text-indent: 0px; ">To access your live dashboard or <a href="egPages/createAccount.html"><b>Create an Account</b></a></h4></center>
+        <center><h4 style="margin: 1px; font-size: 14px; font-weight: 250; color: #E6E6E6; text-indent: 0px; ">To access your live dashboard or <a href="createAccount.html"><b>Create an Account</b></a></h4></center>
         <center>
             <form style="margin: 1px;">
                 <label for="fname"></label>
