--- a/bookList.html
+++ b/bookList.html
@@ -66,7 +66,7 @@
             <p style="color: grey;">Go back to <a class="bottomLink" target="_blank" href="https://www.kfost.com">kfost.com</a>.</p>
         </center>
 
-        <h1 class="small-thin-text"><center>books i've completely read</center></h1>
+        <h1 class="small-thin-text"><center>books i've read</center></h1>
 
         <br />
         <br />
@@ -138,7 +138,7 @@
         <br />
         <br />
 
-        <h1 class="small-thin-text"><center>books i'm currently reading</center></h1>
+        <h1 class="small-thin-text"><center>books i'm reading</center></h1>
 
         <br />
         <br />
