--- a/bookList.html
+++ b/bookList.html
@@ -63,7 +63,7 @@
         <h1 class="large-thin-text"><center>My Bookshelf</center></h1><br />
 
         <center>
-            <p style="color: grey;">Go back to <a class="bottomLink" target="_blank" href="https://www.kfost.com">kfost.com</a>.</p>
+            <p style="color: grey;">Go back to <a class="bottomLink" href="https://www.kfost.com">kfost.com</a>.</p>
         </center>
 
         <h1 class="small-thin-text"><center>books i've read</center></h1>
