--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-<body onload = "typeWriter()" >
+<body>
     <br />
     <div id="dhead" class="container">
         <div class="row">
@@ -30,7 +30,7 @@
                 <br />
                 <h1>Kurt J. Foster</h1>
                 <h2>
-                    <a id="demo"></a><br />
+                    <a id="demo"></a>I enjoy building, testing, and repairing electromechanical systems 🛠️<br />
                     <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFoster.pdf" style="font-size: 14px;">Resumé.pdf</a>  <img src="images/openNewTab.png" />
                 </h2>
                 <div id="dico">
@@ -80,12 +80,12 @@
                 <!-- Title Section -->
                 <h3>Repair and Maintenance Technician</h3>
                 <!-- Title Sub-section -->
-                <p class="companyName">Hewlett-Packard, HP Inc. · Full-time <a class="bottomLink" target="_blank" href="https://www.kforce.com">Kforce Contractor</a></p>
+                <p class="companyName">HP Inc. · Full-time short-term contract with <a class="bottomLink" target="_blank" href="https://www.kforce.com">Kforce Inc.</a></p>
                 <div id="locationInfoPlusPDFlogo">
                     <table>
                         <tr>
                             <th>
-                                <h2>Aug 2023 - Present · 4 mos <br /> Corvallis, Oregon, United States</h2>
+                                <h2>Aug 2023 - Dec 2023 · 5 mos <br /> Corvallis, Oregon, United States</h2>
                             </th>
                             <th>
                                 <!-- INFO toggle image button -->
@@ -134,7 +134,7 @@
                 <!-- Title Section -->
                 <h3>Automation Systems Technician</h3>
                 <!-- Title Sub-section -->
-                <p class="companyName">Enriched Gravity, ABN · Full-time</p>
+                <p class="companyName">Automated Hydroponic Technologies, ABN · Full-time</p>
                 <div id="locationInfoPlusPDFlogo">
                     <table>
                         <tr>
@@ -177,8 +177,6 @@
                         • Used a variety of hand tools: WAGO Variocrimp, self-adjusting wire stripper, heat-guns, tap & die sets, metal jig saws, and other common shop tools<br />
                         • Electrical wiring involving 3.3VDC to 120VAC for powering pumps, valves, and associated electrical equipment, all organized to be functional, safe & user friendly<br /><br />
 
-
-
                         Open-sourced Showcase:<br /><br />
 
                     </div>
@@ -215,7 +213,7 @@
                 <!-- Title Section -->
                 <h3>Equipment Maintenance Technician</h3>
                 <!-- Title Sub-section -->
-                <p class="companyName">Tesla, Inc. · Full-time</p>
+                <p class="companyName">Tesla, Inc. · Full-time <a class="bottomLink" target="_blank" href="https://www.aihr.com/hr-glossary/direct-hire/">Direct hire</a></p>
                 <div id="locationInfoPlusPDFlogo">
                     <table>
                         <tr>
@@ -608,15 +606,15 @@
             <br><br><br>
 
             <footer style="margin-left: 25%; margin-right: 25%; ">
-                <p>Copyright © <a id="p1"></a> 2023 by Kurt J. Foster</p>
+                <p>Copyright © <a id="p1"></a> 2024 by Kurt J. Foster</p>
                 <p style="color: grey;">
                     Tools I've found interesting: <a class="bottomLink" target="_blank" href="https://www.onshape.com/en/">PTC OnShape</a>,  <a class="bottomLink" target="_blank" href="https://www.autodesk.com/products/autocad">Autodesk AutoCAD</a>, <br /><a class="bottomLink" target="_blank" href="https://www.graebert.com/cad-software/ares-commander/">Gräbert ARES Commander</a>, <a class="bottomLink" target="_blank" href="https://www.raspberrypi.com">Raspberry Pi</a>, <a class="bottomLink" target="_blank" href="https://www.arduino.cc">Arduino</a>, <a class="bottomLink" target="_blank" href="https://www.beagleboard.org">Beagle Board</a>, <a class="bottomLink" target="_blank" href="https://inductiveautomation.com/ignition/maker-edition">Ignition Maker Edition</a>, <a class="bottomLink" target="_blank" href="https://www.docker.com">Docker</a>, <a class="bottomLink" target="_blank" href="https://www.nginx.com">NGINX</a>, <a class="bottomLink" target="_blank" href="https://github.com/jaredhanson/passport">Passport.js</a>, <a class="bottomLink" target="_blank" href="https://socket.io">Socket.IO</a>, <a class="bottomLink" target="_blank" href="https://nodejs.org/">Node.js</a>, <a class="bottomLink" target="_blank" href="https://react.dev">React</a>, <a class="bottomLink" target="_blank" href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html">LTspice</a>, <a class="bottomLink" target="_blank" href="https://www.ni.com/en-us/shop/labview.html">LabVIEW</a>, <a class="bottomLink" target="_blank" href="https://www.mysql.com">MySQL</a>, <a class="bottomLink" target="_blank" href="https://standards.nasa.gov/nasa-technical-standards">NASA Standards</a>, <a class="bottomLink" target="_blank" href="https://exoplanetarchive.ipac.caltech.edu">NASA Exoplanet Archive</a>, <a class="bottomLink" target="_blank" href="https://www.teamviewer.com">TeamViewer</a>, <a class="bottomLink" target="_blank" href="https://github.com/jgraph/drawio">draw.io</a>, <a class="bottomLink" target="_blank" href="https://github.com">GitHub</a>, <a class="bottomLink" target="_blank" href="https://https://www.figma.com">Figma</a>, <a class="bottomLink" target="_blank" href="https://visualstudio.microsoft.com/#vs-section">Visual Studio</a>, <a class="bottomLink" target="_blank" href="https://platform.openai.com/codex-javascript-sandbox">Codex</a>, <a class="bottomLink" target="_blank" href="https://getbootstrap.com">getBootstrap</a>, <a class="bottomLink" target="_blank" href="https://www.w3schools.com">W3Schools</a>, <a class="bottomLink" target="_blank" href="https://midjourney.com/home/?callbackUrl=%2Fapp%2F">Midjourney</a>, <a class="bottomLink" target="_blank" href="https://jsfiddle.net">JSFiddle</a>, <a class="bottomLink" target="_blank" href="https://brm.io/matter-js/">Matter.js</a>, <a class="bottomLink" target="_blank" href="https://github.com/openai/point-e">Point-E</a>.
 
                     <br /><br />
 
-
-                    Miscellaneous: <a class="bottomLink" target="_blank" href="bookList.html">Books</a>.
-
+                    <!--
+                            Miscellaneous: <a class="bottomLink" href="bookList.html">Books</a>, <a class="bottomLink" href="businessAppsDashboard.html">Business-Apps Dashboard</a>.
+                     -->
                 </p>
 
                 <p style="color: grey;">By accessing this website, you agree to the <a class="bottomLink" target="_blank" href="usePolicy.html">use policy</a>.</p>
@@ -740,23 +738,6 @@
             $(".color-block11").toggle();
 
         </script>
-
-
-
-
-        <!-- Typewriter effect for the top of the page-->
-        <script>
-            var i = 0;
-            var txt = 'I enjoy building, testing, and repairing electromechanical systems 🛠️';
-            var speed = 10;
-
-            function typeWriter() {
-                if (i < txt.length) {
-                    document.getElementById("demo").innerHTML += txt.charAt(i);
-                    i++;
-                    setTimeout(typeWriter, speed);
-                }
-            }</script>
 
 
 
